[tool.poetry]
name = "letpot"
version = "0.1.0"
description = "Python client for LetPot hydrophonic gardens."
authors = ["Joris Pelgröm <joris.pelgrom@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11"
aiomqtt = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.4"
pytest = "8.3.4"
pytest-cov = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
